--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,7 +3,7 @@ kotlin = "1.9.0"
 dokka = "1.8.20"
 jvmTarget = "17"
 nexusPlugin = "1.3.0"
-kotlinxCoroutines = "1.7.1"
+kotlinxCoroutines = "1.7.2"
 kotlinBinaryCompatibility = "0.13.2"
 androidGradlePlugin = "8.1.0"
 androidxActivity = "1.7.2"
@@ -15,9 +15,9 @@ androidxCore = "1.10.1"
 androidxTestRunner = "1.5.2"
 androidxTestRules = "1.5.0"
 androidxJunit = "1.1.5"
-androidxMacroBenchmark = "1.2.0-alpha13"
+androidxMacroBenchmark = "1.2.0-beta02"
 androidxProfileinstaller = "1.3.1"
-androidxUiAutomator = "2.3.0-alpha02"
+androidxUiAutomator = "2.3.0-alpha04"
 glide = "4.15.1"
 fresco = "2.6.0"
 coil = "2.3.0"
