--- a/gradle.properties
+++ b/gradle.properties
@@ -38,3 +38,5 @@ android.defaults.buildfeatures.shaders=false
 android.nonTransitiveRClass=true
 # Use K2 compiler
 kotlin.experimental.tryK2=true
+# Run lint on K2
+android.lint.useK2Uast=true
