--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -32,6 +32,7 @@ nav:
   - 'Image Component and Plugin': image-component-and-plugin.md
   - 'BOM': bom.md
   - 'Snapshots With Paparazzi': snapshots-with-paparazzi.md
+  - 'Version Map': version-map.md
   - 'Sponsor 🩷': sponsor.md
     
 # Repository
