--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,24 +5,24 @@ jvmTarget = "11"
 nexusPlugin = "1.3.0"
 kotlinxCoroutines = "1.7.3"
 kotlinBinaryCompatibility = "0.13.2"
-androidGradlePlugin = "8.1.1"
+androidGradlePlugin = "8.1.2"
 androidxActivity = "1.7.2"
 androidxMaterial = "1.9.0"
-androidxComposeBom = "2023.09.00"
+androidxComposeBom = "2023.09.02"
 androidxComposeCompiler = "1.5.3"
 androidxComposeConstraintLayout = "1.0.1"
 androidxCore = "1.12.0"
 androidxTestRunner = "1.5.2"
 androidxTestRules = "1.5.0"
 androidxJunit = "1.1.5"
-androidxMacroBenchmark = "1.2.0-beta05"
+androidxMacroBenchmark = "1.2.0-rc01"
 androidxProfileinstaller = "1.3.1"
 androidxUiAutomator = "2.3.0-alpha04"
 glide = "4.16.0"
 fresco = "3.1.0"
 coil = "2.4.0"
 palette = "1.0.0"
-hilt = "2.47"
+hilt = "2.48"
 spotless = "6.20.0"
 
 [libraries]
