Enable compose compiler options

--- a/gradle.properties
+++ b/gradle.properties
@@ -36,3 +36,6 @@ android.defaults.buildfeatures.shaders=false
 # thereby reducing the size of the R class for that library
 # https://developer.android.com/studio/releases/gradle-plugin#4.1-nontransitive-r-class
 android.nonTransitiveRClass=true
+# Eanble compose compiler options
+enableComposeCompilerMetrics=true
+enableComposeCompilerReports=true
