--- a/gradle.properties
+++ b/gradle.properties
@@ -41,6 +41,19 @@ android.nonTransitiveRClass=true
 enableComposeCompilerMetrics=true
 enableComposeCompilerReports=true
 
+# MPP
+kotlin.mpp.enableCInteropCommonization=true
+kotlin.mpp.stability.nowarn=true
+kotlin.mpp.androidSourceSetLayoutVersion=2
+kotlin.native.binary.memoryModel=experimental
+kotlin.native.cacheKind=none
+
+# Compose
+org.jetbrains.compose.experimental.uikit.enabled=true
+org.jetbrains.compose.experimental.macos.enabled=true
+org.jetbrains.compose.experimental.jscanvas.enabled=true
+compose.kotlin.native.manageCacheKind=false
+
 # Required to publish to Nexus (see https://github.com/gradle/gradle/issues/11308)
 systemProp.org.gradle.internal.publish.checksums.insecure=true
 
