Support landscapist-palette for KMP

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -53,7 +53,7 @@ kotlinx-coroutines-android = { group = "org.jetbrains.kotlinx", name = "kotlinx-
 kotlinx-coroutines-test = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-test", version.ref = "kotlinxCoroutines" }
 hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt" }
 hilt-compiler = { group = "com.google.dagger", name = "hilt-android-compiler", version.ref = "hilt" }
-palette = { group = "androidx.palette", name = "palette-ktx", version.ref = "palette" }
+palette = { group = "com.kmpalette", name = "kmpalette-core", version.ref = "palette" }
 glide = { group = "com.github.bumptech.glide", name = "glide", version.ref = "glide" }
 fresco = { group = "com.facebook.fresco", name = "fresco", version.ref = "fresco" }
 fresco-okhttp3 = { group = "com.facebook.fresco", name = "imagepipeline-okhttp3", version.ref = "fresco" }
