--- a/gradle.properties
+++ b/gradle.properties
@@ -45,8 +45,13 @@ enableComposeCompilerReports=true
 kotlin.mpp.enableCInteropCommonization=true
 kotlin.mpp.stability.nowarn=true
 kotlin.mpp.androidSourceSetLayoutVersion=2
+kotlin.native.ignoreIncorrectDependencies=true
 kotlin.native.binary.memoryModel=experimental
 kotlin.native.cacheKind=none
+
+kotlinx.atomicfu.enableJsIrTransformation=true
+kotlinx.atomicfu.enableJvmIrTransformation=true
+kotlinx.atomicfu.enableNativeIrTransformation=true
 
 # Compose
 org.jetbrains.compose.experimental.uikit.enabled=true
