--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -22,7 +22,7 @@ jetbrains-compose = "1.5.11"
 glide = "4.16.0"
 fresco = "3.1.3"
 coil = "2.5.0"
-coil3 = "3.0.0-SNAPSHOT"
+coil3 = "3.0.0-alpha01"
 ktor = "3.0.0-wasm2"
 palette = "2.2.0"
 hilt = "2.50"
