--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -23,7 +23,7 @@ glide = "4.16.0"
 fresco = "3.1.3"
 coil = "2.5.0"
 coil3 = "3.0.0-alpha03"
-ktor = "3.0.0-wasm2"
+ktor = "2.3.7"
 palette = "2.2.0"
 hilt = "2.50"
 spotless = "6.21.0"
