Migrate Kotlin to 2.0.0 and Compose compiler plugin

--- a/gradle.properties
+++ b/gradle.properties
@@ -45,6 +45,7 @@ enableComposeCompilerReports=true
 kotlin.mpp.enableCInteropCommonization=true
 kotlin.mpp.stability.nowarn=true
 kotlin.mpp.androidSourceSetLayoutVersion=2
+kotlin.mpp.androidGradlePluginCompatibility.nowarn=true
 kotlin.native.ignoreIncorrectDependencies=true
 kotlin.native.binary.memoryModel=experimental
 kotlin.native.cacheKind=none
