--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,19 +3,18 @@ kotlin = "2.0.0"
 dokka = "1.9.20"
 jvmTarget = "11"
 nexusPlugin = "0.26.0"
-kotlinxCoroutines = "1.8.0"
+kotlinxCoroutines = "1.8.1"
 kotlinBinaryCompatibility = "0.14.0"
 androidGradlePlugin = "8.4.1"
 androidxActivity = "1.9.0"
 androidxMaterial = "1.12.0"
 androidxComposeBom = "2024.05.00"
-androidxComposeCompiler = "1.5.11"
 androidxComposeConstraintLayout = "1.0.1"
 androidxCore = "1.13.1"
 androidxTestRunner = "1.5.2"
 androidxTestRules = "1.5.0"
 androidxJunit = "1.1.5"
-androidxMacroBenchmark = "1.2.4"
+androidxMacroBenchmark = "1.3.0-alpha05"
 androidxProfileinstaller = "1.3.1"
 androidxUiAutomator = "2.3.0"
 jetbrains-compose = "1.6.11"
