--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,20 +1,20 @@
 [versions]
-kotlin = "2.0.0"
+kotlin = "2.0.20"
 dokka = "1.9.20"
 jvmTarget = "11"
 nexusPlugin = "0.29.0"
 kotlinxCoroutines = "1.8.1"
-kotlinBinaryCompatibility = "0.14.0"
+kotlinBinaryCompatibility = "0.16.3"
 androidGradlePlugin = "8.5.2"
-androidxActivity = "1.9.1"
+androidxActivity = "1.9.2"
 androidxMaterial = "1.12.0"
-androidxComposeBom = "2024.06.00"
+androidxComposeBom = "2024.09.01"
 androidxComposeConstraintLayout = "1.0.1"
 androidxCore = "1.13.1"
 androidxTestRunner = "1.6.1"
 androidxTestRules = "1.6.1"
 androidxJunit = "1.2.1"
-androidxMacroBenchmark = "1.3.0-rc01"
+androidxMacroBenchmark = "1.3.0"
 androidxProfileinstaller = "1.3.1"
 androidxUiAutomator = "2.3.0"
 jetbrains-compose = "1.6.11"
@@ -22,7 +22,7 @@ glide = "4.16.0"
 fresco = "3.2.0"
 coil = "2.7.0"
 coil3 = "3.0.0-alpha10"
-ktor = "2.3.11"
+ktor = "2.3.12"
 palette = "3.1.0"
 hilt = "2.52"
 spotless = "6.21.0"
