--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -21,7 +21,7 @@ jetbrains-compose = "1.6.11"
 glide = "4.16.0"
 fresco = "3.2.0"
 coil = "2.7.0"
-coil3 = "3.0.0-alpha10"
+coil3 = "3.0.0-alpha09"
 ktor = "2.3.12"
 palette = "3.1.0"
 hilt = "2.52"
@@ -66,7 +66,8 @@ fresco-middleware = { group = "com.facebook.fresco", name = "middleware", versio
 coil = { group = "io.coil-kt", name = "coil", version.ref = "coil" }
 coil-gif = { group = "io.coil-kt", name = "coil-gif", version.ref = "coil" }
 coil3 = { group = "io.coil-kt.coil3", name = "coil", version.ref = "coil3" }
-coil3-network = { group = "io.coil-kt.coil3", name = "coil-network-ktor3", version.ref = "coil3" }
+coil3-network-ktor2 = { group = "io.coil-kt.coil3", name = "coil-network-ktor2", version.ref = "coil3" }
+coil3-network-ktor3 = { group = "io.coil-kt.coil3", name = "coil-network-ktor3", version.ref = "coil3" }
 ktor-core = { group = "io.ktor", name = "ktor-client-core", version.ref = "ktor" }
 ktor-okhttp = { group = "io.ktor", name = "ktor-client-okhttp", version.ref = "ktor" }
 ktor-engine-darwin = { module = "io.ktor:ktor-client-darwin", version.ref = "ktor" }
