--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,7 +14,7 @@ androidxCore = "1.13.1"
 androidxTestRunner = "1.6.2"
 androidxTestRules = "1.6.1"
 androidxJunit = "1.2.1"
-androidxMacroBenchmark = "1.3.1"
+androidxMacroBenchmark = "1.4.0-alpha01"
 androidxProfileinstaller = "1.4.0"
 androidxUiAutomator = "2.3.0"
 jetbrains-compose = "1.6.11"
