--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,5 @@
 [versions]
-kotlin = "2.0.20"
+kotlin = "2.0.21"
 dokka = "1.9.20"
 jvmTarget = "11"
 nexusPlugin = "0.29.0"
@@ -8,22 +8,22 @@ kotlinBinaryCompatibility = "0.16.3"
 androidGradlePlugin = "8.6.1"
 androidxActivity = "1.9.2"
 androidxMaterial = "1.12.0"
-androidxComposeBom = "2024.09.02"
+androidxComposeBom = "2024.09.03"
 androidxComposeConstraintLayout = "1.0.1"
 androidxCore = "1.13.1"
 androidxTestRunner = "1.6.2"
 androidxTestRules = "1.6.1"
 androidxJunit = "1.2.1"
-androidxMacroBenchmark = "1.4.0-alpha01"
-androidxProfileinstaller = "1.4.0"
+androidxMacroBenchmark = "1.4.0-alpha02"
+androidxProfileinstaller = "1.4.1"
 androidxUiAutomator = "2.3.0"
 kotlinxSerializationJson = "1.7.3"
 jetbrains-compose = "1.6.11"
 glide = "4.16.0"
 fresco = "3.2.0"
 coil = "2.7.0"
-coil3 = "3.0.0-alpha10"
-ktor = "3.0.0-rc-1"
+coil3 = "3.0.0-rc01"
+ktor = "3.0.0"
 palette = "3.1.0"
 hilt = "2.52"
 spotless = "6.21.0"
