--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -18,7 +18,7 @@ androidxMacroBenchmark = "1.4.0-alpha02"
 androidxProfileinstaller = "1.4.1"
 androidxUiAutomator = "2.3.0"
 kotlinxSerializationJson = "1.7.3"
-jetbrains-compose = "1.7.0+build1877-release-1.7"
+jetbrains-compose = "1.6.11"
 glide = "4.16.0"
 fresco = "3.3.0"
 coil = "2.7.0"
