Enable dokka2 migration helper

--- a/gradle.properties
+++ b/gradle.properties
@@ -56,6 +56,9 @@ org.jetbrains.compose.experimental.macos.enabled=true
 org.jetbrains.compose.experimental.jscanvas.enabled=true
 compose.kotlin.native.manageCacheKind=false
 
+# Dokka
+org.jetbrains.dokka.experimental.gradle.pluginMode=V2EnabledWithHelpers
+
 # Required to publish to Nexus (see https://github.com/gradle/gradle/issues/11308)
 systemProp.org.gradle.internal.publish.checksums.insecure=true
 
