--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,2 +1,2 @@
 github: skydoves
-custom: ["https://www.paypal.me/skydoves"]
+custom: ["https://www.android.skydoves.me/", "https://github.com/doveletter"]
