--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -69,3 +69,17 @@ jobs:
         run: |
           ./gradlew --scan --stacktrace \
               testDebugUnitTest
+
+  stability_check:
+    name: Compose Stability check
+    runs-on: macos-latest
+    steps:
+      - name: Check out code
+        uses: actions/checkout@v5.0.0
+      - name: Set up JDK
+        uses: actions/setup-java@v5.0.0
+        with:
+          distribution: 'zulu'
+          java-version: 21
+      - name: API check
+        run: ./gradlew stabilityCheck
