Depends on build task for Compose Stability Check

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -71,8 +71,9 @@ jobs:
               testDebugUnitTest
 
   stability_check:
-    name: Compose Stability check
+    name: Compose Stability Check
     runs-on: macos-latest
+    needs: build
     steps:
       - name: Check out code
         uses: actions/checkout@v5.0.0
