--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -82,5 +82,5 @@ jobs:
         with:
           distribution: 'zulu'
           java-version: 21
-      - name: API check
+      - name: compose stability check
         run: ./gradlew stabilityCheck
