--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,7 +10,7 @@ docs_dir: docs
 # Navigation
 nav:
   - 'Overview': index.md
-  - 'Landscapist':
+  - 'Landscapist (KMP)':
     - 'Landscapist Core': landscapist/landscapist-core.md
     - 'Landscapist Image': landscapist/landscapist-image.md  
     - 'Why Choose Landscapist': landscapist/why-choose-landscapist.md
