Migrate to AGP 9.0

--- a/gradle.properties
+++ b/gradle.properties
@@ -26,9 +26,6 @@ org.gradle.configureondemand=true
 # AndroidX Migration https://developer.android.com/jetpack/androidx/migrate
 android.useAndroidX=true
 # Removes uneccessary default build features
-android.defaults.buildfeatures.aidl=false
-android.defaults.buildfeatures.buildconfig=false
-android.defaults.buildfeatures.renderscript=false
 android.defaults.buildfeatures.resvalues=false
 android.defaults.buildfeatures.shaders=false
 # Enables namespacing of each library's R class so that its R class includes only the
@@ -36,6 +33,10 @@ android.defaults.buildfeatures.shaders=false
 # thereby reducing the size of the R class for that library
 # https://developer.android.com/studio/releases/gradle-plugin#4.1-nontransitive-r-class
 android.nonTransitiveRClass=true
+# AGP 9 opt-out: Disable built-in Kotlin support to allow KMP plugin compatibility
+# TODO: Migrate to com.android.kotlin.multiplatform.library plugin before AGP 10
+android.builtInKotlin=false
+android.newDsl=false
 
 # Eanble compose compiler options
 enableComposeCompilerMetrics=true
