--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -24,7 +24,7 @@ jobs:
 
       - name: Publish to MavenCentral
         run: |
-          ./gradlew publishAllPublicationsToMavenCentral --no-configuration-cache -x javaDocReleaseGeneration -x :fresco:javaDocReleaseGeneration -x :landscapist-core:javaDocReleaseGeneration -x :landscapist-image:javaDocReleaseGeneration
+          ./gradlew publishAllPublicationsToMavenCentral --no-configuration-cache -x javaDocReleaseGeneration -x :fresco:javaDocReleaseGeneration
         env:
           ORG_GRADLE_PROJECT_mavenCentralUsername: ${{ secrets.OSSRH_USERNAME }}
           ORG_GRADLE_PROJECT_mavenCentralPassword: ${{ secrets.OSSRH_PASSWORD }}
